@@ -31,6 +31,8 @@ Version 0.9
 
 - Fixed bugs in the D and MiniD lexer.
 
+- Added a MOOCode lexer.
+
 
 Version 0.8.1
 -------------
